--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -17,8 +17,31 @@ While information is here and accurate enough to be deployed, the page is not ye
 This is the first zone of the Occult Crescent released in patch 7.25 and contains many FATEs, Critical Engagements, and the Forked Tower: Blood. This zone also contains the first half of the
 story. Completion of the story is not gated by clear the Forked Tower: Blood. 
 
-<br></br>
-<hr></hr>
+<br/><hr/>
+
+## Mobs
+Mobs of varying species and types can be found in clusters around the South Horn. Generally the further you go from base camp, the higher the level of mob you will encounter. 
+
+You can find a non-exhaustive list of mobs along with their aggro type and resistance's on the <a href="https://docs.google.com/spreadsheets/d/1oWuDtRxYUsVo2HxzvUecnzXpyRo1ozxuw_s6Lr2gepU/edit?gid=2005261057#gid=2005261057" target="_blank">Do It Doom</a> 
+spreadsheet maintained by Wobl.
+- Do It Doom: https://docs.google.com/spreadsheets/d/1oWuDtRxYUsVo2HxzvUecnzXpyRo1ozxuw_s6Lr2gepU/edit?gid=2005261057#gid=2005261057
+
+### Mob Level Map
+Map that shows which region contains which level of mobs. Can be useful when trying to find an area to chain.
+<Image
+    src="/oc/shmoblevels.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="shmoblevels"
+    onclick="window.open('/oc/shmoblevels.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+Map Source: <a href="https://x.com/L0VELYJP/status/1927621725056807326" target="_blank">L0VELYJP</a> on Twitter.
+
+<br/><hr/>
 
 ## Occult Records
 This section will spoil all survey points needed to fill out your Occult record book for progressing the story. Its always reccomended to try it yourself first before looking up a guide. 
@@ -59,8 +82,7 @@ A helpful piece of advice is to do this early! Knowledge Level XP cannot be lost
 
 Other records in your book can filled out via Field Notes. Which can be earned from completing FATEs, CEs, and clearing bosses in the Forked Tower: Blood.
 
-<br></br>
-<hr></hr>
+<br/><hr/>
 ## Currencies
 There are currently 3 different types of currency that are all earned in (mostly) unique ways and change be exchanged for mounts, glamours, gear progression, ciphers for Forked Tower: Blood, or
 other resources to aide you in taking on the South Horn. There is silver which is only from FATEs, CEs, and Bunnys/Pots. Gold which can only be earned from chaining mobs or Bunnys/Pots. Then Sanguinite which is
@@ -96,6 +118,7 @@ You can see a full list of items available to purchase by visiting the Expeditio
 </div>
 </details>
 
+<br/>
 ### Enlightenment Gold Pieces
 Enlightenment Gold Pieces are *only* earned by chaining mobs or opening pot/bunny coffers in the South Horn.
 <div style="display:flex; justify-content: center;">
@@ -126,6 +149,7 @@ You can see a full list of items available to purchase by visiting the Expeditio
 </div>
 </details>
 
+<br/>
 ### Sanguinite
 Forked Tower: Blood exclusive currency. Earned from completing encounters and finding hidden chests throughout the tower. A max of 30 sanguinite can be potentially earned
 per clear. Sanguinite is mostly used to purchase X-Fixatives which are used in augmenting Arcanaut's gear from +1 to +2.
@@ -146,15 +170,9 @@ You can see a full list of items available to purchase by visiting the Expeditio
 </div>
 </details>
 
-<br></br>
-<hr></hr>
-## Gold Farming
-<a href="https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0" target="_blank">Read more about gold farming.</a> Guide contains both solo and group farming guides.
-
-<br></br>
-<hr></hr>
-## Critical Engagements
-Critical Engagements, or CEs from here on, are the older sibling to FATEs. These battles are against a much more fierce foe and can sometimes reward new Phantom Jobs, field records, as well as more experience and silver.
+<br/><hr/>
+## Critical Encounters
+Critical Encounters, or CEs from here on, are the older sibling to FATEs. These battles are against a much more fierce foe and can sometimes reward new Phantom Jobs, field records, as well as more experience and silver.
 CEs are broken in two kinds, ones that can be spawned by the player and ones that spawn randomly without player input. The rewards are the same regardless of spawn method however.
 
 Every successful Critical Engagement will reward the following
@@ -195,8 +213,7 @@ All CEs listed below are spawned by killing a specific mob until it spawns. If i
 | Calamity Bound      | Cloister Demon        | Crescent Inkstains  | (X: 14, Y: 35) | Story Progression, Field Notes | 
 </div>
 
-<br></br>
-<hr></hr>
+<br/><hr/>
 ## FATEs
 These are just like FATEs in the overworld. Just show up, do the required objective, and move on. 
 These are much smaller in scale compared to the critical engagement counterpart and often only take a fraction of the time to complete. 
@@ -225,3 +242,96 @@ Every successful FATE you complete with a **gold** rating will reward the follow
 | Pleading Pots         | (X: 25, Y: 17) | Field Notes |
 | Persistent Pots       | (X: 11, Y: 32) | Field Notes |
 </div>
+
+<br/><hr/>
+## Gold Farming
+Gold farming is primarily done with the use of thief tanks, thief sages, and cannoneers to kill groups of high level mobs before they overwhelm the group. Most groups tend to use the top floor of The Abanonded Ascent tower located in the
+bottom left (South West) corner of the map. They would go in circles gathering and killing the Isleblazers and Zirnitras until satisfied. 
+
+You can read more about gold farming in the following Google doc: 
+<a href="https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0" target="_blank">Actually Good Guides to Gold Farming</a>. The guide contains both solo and group farming guides.
+- Actually Good Guides to Gold Farming: https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0
+
+<br/><hr/>
+## Chest Farming
+Farming chests efficiently can help you not overcap and waste chest spawns. Here are a few pre-made routes used by friends and myself.
+
+### Multiple Lines Routing
+Useful for doing specific sections of the map at a time. Allows you to take breaks and change what routes you do depending on time.
+<Image
+    src="/oc/coffer_route.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="coffer_route"
+    onclick="window.open('/oc/coffer_route.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+### No Return Routing
+Don't want to press return and just get the whole map in one sweep? Use this routing.
+<Image
+    src="/oc/noreturnroute.jpg"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="noreturnroute"
+    onclick="window.open('/oc/noreturnroute.jpg','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+<br/><hr/>
+
+## South Horn Persistent Pots
+### Pot Chest Locations
+Below is a map showcasing all potential pot locations. There are 80 chest locations in total, 30 for the North FATE and 30 for the South FATE; both of which are denoted with a golden chest icon. 
+The remaining 20 are for second chance pots; these are noted by the more bronze coffer icon. 
+<Image
+    src="/oc/pot_spots.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="pot_spots"
+    onclick="window.open('/oc/pot_spots.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+### Finding your Pot Chest Fast
+Based on which Pot FATE you just completed (north left, south right), you can immediately use your Magical Elixir and get an immediate sense on where your pot might take you! Simply match the color of 
+dots with the initial direction, and you can garauntee that your pot will take you to one of those similarly colored dots. 
+
+Example: Finishing the North pots FATE (using the left image) and sensing something East means I can head towards the group of pink dots, stand in the center of the pink dots, use my elixir once again, and almost immediately know where my pot chest is!
+
+<Image
+    src="/oc/pots_quickmap.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="pots_quickmap"
+    onclick="window.open('/oc/pots_quickmap.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+<br/><hr/>
+## South Horn Fortune Carrots
+### Fortune Carrots Locations
+Map showcases each pre-deteremined spot where a carrot could spawn.
+<Image
+    src="/oc/bunny.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="Crystal Paste Values"
+    onclick="window.open('/oc/bunny.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
