--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -16,7 +16,7 @@ import Footer from "@components/Footer.astro";
         <h2 style="display:flex;justify-content:center">Field Operations</h2>
         <div style="display:flex;justify-content:center" class="multi-button">
             <div>
-                <button onclick="location.href='https://www.youtube.com/watch?v=t6XbIAXhXS4'">Baldesion Arsenal</button>
+                <button onclick="location.href='https://www.youtube.com/watch?v=t6XbIAXhXS4' location.target'_blank'">Baldesion Arsenal</button>
                 <button onclick="location.href='/drs/overview'">Delubrum (Savage)</button>
                 <button onclick="location.href='/crescent/occult'">Occult Crescent</button>
             </div>
