Fixing broken links

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -178,7 +178,7 @@ Map showcases all possible spawn locations for the 8 silvers and 60 bronze locat
 
 
 ### Coffer Farming Routes
-For pre-made farming routes in South Horn, you can visit the [South Horn page's chest farming section](southhorn#chest-farming).
+For pre-made farming routes in South Horn, you can visit the [South Horn page's chest farming section](southhorn).
 
 
 <br/><hr/>
