More reorganizing, adding information to the phantom jobs page

--- a/src/content/docs/crescent/gearing.mdx
+++ b/src/content/docs/crescent/gearing.mdx
@@ -25,6 +25,19 @@ In FFXIV, if a piece of gear's item level is above the duty's item level sync, t
 
 This means, while occult gear *can* be melded, you should not be meld it for specific use in Occult Crescent. The only gear that can be melded and have those melds *work* is Neo Kingdom gear.
 
+### Mini TL;DR 
+<Image
+    src="/oc/ocbis.png"
+    width="500"
+    height="300"
+    decoding="async"
+    loading="eager"
+    alt="ocbis"
+    onclick="window.open('/oc/ocbis.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
 <br></br>
 <hr></hr>
 ## Where to Obtain Occult Gear
@@ -41,8 +54,8 @@ which Critical Encounter drop what accessory is below.
 
 <Image
     src="/oc/acc_map.png"
-    width="500"
-    height="300"
+    width="600"
+    height="400"
     decoding="async"
     loading="eager"
     alt="acc_map"
